--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,12 +294,14 @@
 }
 
 .fruite .fruite-categorie .fruite-name a:hover {
-    color: var(--bs-secondary);
+    /* color: var(--bs-secondary); */
 }
 
-.fruite .fruite-item {
+.fruite .fruite-item :hover > img{
     height: 100%;
     transition: 0.5s;
+    scale: 1.15;
+    filter: grayscale(0);
 }
 .fruite .fruite-item:hover {
     box-shadow: 0 0 55px rgba(0, 0, 0, 0.4);
@@ -312,11 +314,14 @@
 }
 
 .fruite .fruite-item .fruite-img img {
-    transition: 0.5s;
+    /* transition: 0.5s; */
+    transition: scale 750ms ease-out ,filter 250ms ease-in-out;
+    filter: grayscale(1);
 }
 
 .fruite .fruite-item .fruite-img img:hover {
-    transform: scale(1.3);
+    scale: 1.15;
+    filter: grayscale(0);
 }
 /*** Fruits End ***/
 
